<resources>
    <string name="app_name" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="notification_sound">Звуки уведомлений</string>
    <string name="settings">Настройки</string>
    <string name="vibration">Вибрация</string>
    <string name="version">version: </string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="next">Далее</string>
    <string name="send">Отправить</string>
    <string name="enter_email">Введите свой Email адрес: </string>
    <string name="sound_notify_on">Звуковые уведомления включены</string>
    <string name="vibro_notify_on">Вибрация включена</string>
    <string name="sound_notify_off">Звуковые уведомления отключены</string>
    <string name="vibro_notify_off">Вибрация отключена</string>
    <string name="profile">Профиль</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="about_myself">О себе:</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sign_out">Выйти</string>

    <string name="error">Error</string>
    <string name="enter_message">Enter message</string>
</resources>
